--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,17 +21,18 @@ jobs:
         with:
           node-version: 18
 
-      # Install dependencies
       - name: Install dependencies
         run: npm install
+        working-directory: resume
 
       # Build the project
       - name: Build project
         run: npm run build
+        working-directory: resume
 
       # Deploy to GitHub pages
       - name: Deploy to GitHub pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: dist
+          publish_dir: resume/dist
